# eth_analytics_test_task

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
cron_service/: pyproject.toml
cron_service/src/: _settings.py  constants.py  main.py
cron_service/src/database/migrations/: env.py
cron_service/src/database/models/: __init__.py  base.py  models.py
cron_service/src/database/repositories/: absctract_repository.py  abstract_manager.py  manager.py  transaction_repository.py
cron_service/src/services/get_block_transactions_service/: abc_service.py  https.py
cron_service/src/services/get_last_processed_block_service/: abc_service.py  repository.py
cron_service/src/services/get_latest_block_service/: abc_service.py  https.py
cron_service/src/services/logging_service/: logging_factory.py
cron_service/src/services/process_new_blocks_service/: abc_service.py  facade.py
cron_service/src/services/save_transactions_service/: abc_service.py  repository.py
cron_service/system/: Dockerfile  crontab  entrypoint.sh
rest_api_service/: pyproject.toml
rest_api_service/src/: _settings.py  constants.py  db_manager.py  rest_main.py
rest_api_service/src/api/endpoints_v1/: __init__.py  transactions.py
rest_api_service/src/database/migrations/: env.py
rest_api_service/src/database/models/: __init__.py  models.py
rest_api_service/src/database/repositories/: absctract_repository.py  manager.py  transaction_repository.py
rest_api_service/src/services/get_address_with_largest_change_service/: facade.py  (+1 more)
rest_api_service/system/: Dockerfile  entrypoint.sh
(+17 files in other folders)
