[tool.poetry]
name = "cron-service"
version = "0.1.0"
description = ""
authors = ["QdMiracle <qdmiracle21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
loguru = "^0.7.3"
httpx = "^0.28.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
