[tool.poetry]
name = "rest-api-service"
version = "0.1.0"
description = ""
authors = ["QdMiracle <qdmiracle21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
